--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@gsap/react": "^2.1.2",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "gsap": "^3.13.0",
@@ -23,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
